<resources>
    <string name="app_name">Memory Match</string>

    <!-- Menu Strings -->
    <string name="new_game_button">New Game</string>
    <string name="easy_difficulty">Easy</string>
    <string name="hard_difficulty">Hard</string>
    <string name="how_to_play_button">How to Play</string>
    <string name="leaderboards_button">Leaderboards</string>

    <!-- Game Strings -->
    <string name="score_fmt">Score: %1d</string>

    <!-- Rule Strings -->
    <string name="rules_title">How To Play</string>
    <string name="controls_title">Controls</string>
    <string name="controls">
        Touch two tiles to flip them over and reveal their animals.\nTry to match!
    </string>
    <string name="scoring_title">Scoring</string>
    <string name="scoring">
        Match: +20\nMismatch: -5 for each time the selected tiles have been previously revealed
    </string>
    <string name="easy_title">Easy (4 Animals)</string>
    <string name="easy_explanation">-1 point every 2 seconds</string>
    <string name="hard_title">Hard (8 Animals)</string>
    <string name="hard_explanation">-1 point every 1 second</string>
    <string name="back_to_menu">Main Menu</string>

    <!-- Leaderboard Strings -->
    <string name="leaderboard_title">High Scores</string>

</resources>

