<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.holman.andrew.memorymatch.leaderboard.LeaderboardActivity">

    <TextView
        android:id="@+id/leaderboard_title"
        android:text="@string/leaderboard_title"
        android:layout_marginBottom="10dp"
        style="@style/MenuTitle"/>

    <RelativeLayout
        android:id="@+id/leaderboard_switcher"
        android:layout_below="@+id/leaderboard_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/centerShim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/switch_easy_leaderboard"
            android:onClick="swapLeaderboard"
            android:tag="0"
            android:text="@string/easy_difficulty"
            android:layout_alignRight="@+id/centerShim"
            android:layout_alignEnd="@+id/centerShim"
            style="@style/LargeMenuButton.DifficultyButton.EasyButton"/>

        <Button
            android:id="@+id/switch_hard_leaderboard"
            android:onClick="swapLeaderboard"
            android:tag="1"
            android:text="@string/hard_difficulty"
            android:layout_alignLeft="@+id/centerShim"
            android:layout_alignStart="@+id/centerShim"
            style="@style/LargeMenuButton.DifficultyButton.HardButton"/>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/leaderboard_fragment_container"
        android:layout_below="@+id/leaderboard_switcher"
        android:layout_above="@+id/previous_score"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/previous_score"
        android:layout_above="@+id/return_to_menu"
        android:visibility="gone"
        android:gravity="center"
        android:textStyle="bold"
        style="@style/LargeMenuButton.DifficultyButton"/>

    <Button
        android:id="@+id/return_to_menu"
        android:onClick="endActivity"
        android:layout_alignParentBottom="true"
        android:text="@string/back_to_menu"
        style="@style/LargeMenuButton"/>
</RelativeLayout>
